@@ -366,22 +366,6 @@ bool EmuTCPConnection::LineOutQueuePush(char* line) {
 			safe_delete_array(line);
 			return(true);
 		}
-		if (strcmp(line, "**PACKETMODESS**") == 0) {
-			MSendQueue.lock();
-			safe_delete_array(sendbuf);
-			if (TCPMode == modeConsole)
-				Send((const uchar*) "\0**PACKETMODESS**\r", 18);
-			TCPMode = modePacket;
-			PacketMode = packetModeSocket_Server;
-			EmuTCPNetPacket_Struct* tnps = 0;
-			while ((tnps = InModeQueue.pop())) {
-				SendPacket(tnps);
-				safe_delete_array(tnps);
-			}
-			MSendQueue.unlock();
-			safe_delete_array(line);
-			return(true);
-		}
 	}
 
 	return(TCPConnection::LineOutQueuePush(line));
@@ -435,13 +419,6 @@ bool EmuTCPConnection::ConnectIP(uint32 irIP, uint16 irPort, char* errbuf) {
 				sendbuf = new uchar[sendbuf_size];
 				memcpy(sendbuf, "\0**PACKETMODEQS**\r", sendbuf_size);
 			} 
-			else if (PacketMode == packetModeSocket_Server) {
-				safe_delete_array(sendbuf);
-				sendbuf_size = 18;
-				sendbuf_used = sendbuf_size;
-				sendbuf = new uchar[sendbuf_size];
-				memcpy(sendbuf, "\0**PACKETMODESS**\r", sendbuf_size);
-			}
 			else {
 				//default: packetModeZone
 				safe_delete_array(sendbuf);
