@@ -18,7 +18,6 @@
 #ifndef TYPES_H
 #define TYPES_H
 
-#ifdef EQEMU_USE_STDINT
 #include <stdint.h>
 typedef uint8_t byte;
 typedef uint8_t uint8;
@@ -29,29 +28,6 @@ typedef int8_t int8;
 typedef int16_t int16;
 typedef int32_t int32;
 typedef int64_t int64;
-#else
-typedef unsigned char		byte;
-typedef unsigned char		uint8;
-typedef signed char			int8;
-typedef unsigned short		uint16;
-typedef signed short		int16;
-typedef unsigned int		uint32;
-typedef signed int			int32;
-
-#ifdef _WINDOWS
-	#if defined(_INTEGRAL_MAX_BITS) && _INTEGRAL_MAX_BITS >= 64
-		typedef unsigned __int64	uint64;
-		typedef unsigned __int64	uint64;
-		typedef signed __int64		int64;
-	#else
-		#error __int64 not supported
-	#endif
-#else
-typedef unsigned long long	uint64;
-typedef unsigned long long	uint64;
-typedef signed long long	int64;
-#endif
-#endif
 
 #ifdef _WINDOWS
 	#pragma warning( disable : 4200 )
