@@ -31,4 +31,4 @@ IF(UNIX)
     ADD_DEFINITIONS(-fPIC)
 ENDIF(UNIX)
 
-SET(LIBRARY_OUTPUT_PATH ../Bin)
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
