@@ -86,7 +86,6 @@
 #include "AdventureManager.h"
 #include "ucs.h"
 #include "queryserv.h"
-#include "socket_server.h"
 
 TimeoutManager timeout_manager;
 EQStreamFactory eqsf(WorldStream,9000);
@@ -98,7 +97,6 @@ LoginServerList loginserverlist;
 EQWHTTPServer http_server;
 UCSConnection UCSLink;
 QueryServConnection QSLink;
-Socket_Server_Connection SSLink;
 LauncherList launcher_list;
 AdventureManager adventure_manager;
 DBAsync *dbasync = nullptr;
@@ -455,8 +453,6 @@ int main(int argc, char** argv) {
 		UCSLink.Process();
 
 		QSLink.Process();
-
-		SSLink.Process();
 
 		LFPGroupList.Process();
 
